BusOne/src/objects/EM_Event_Layout_vod__c.object
<CustomObject>
    <description>Used for defining what page layout is seen by the user based on a number of criteria. Used by Veeva Event Management.</description>
    <fields>
        <fullName>Country_Override_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is blank, the Event Layout record will apply to all countries associated with an Event Configuration record. If it is populated, the Event Layout will only apply to that specific country</description>
        <label>Country Override</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Event_Configuration_Country_vod__c.Event_Configuration_vod__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event_Configuration_vod__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Event_Configuration_Country_vod__c</referenceTo>
        <relationshipLabel>Event Layouts</relationshipLabel>
        <relationshipName>EM_Event_Layout_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Configuration_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event configuration that the layout record is used for.</description>
        <label>Event Configuration</label>
        <referenceTo>EM_Event_Configuration_vod__c</referenceTo>
        <relationshipLabel>Event Layouts</relationshipLabel>
        <relationshipName>EM_Event_Layout_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Layout_vod__c</fullName>
        <description>The page layout to be used for the event, based on the event status, user profile, and event team role of the user viewing the event. Maps to the page layouts available on the EM_Event_vod object.</description>
        <label>Event Layout</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Object_Name_vod__c</fullName>
        <description>Set an object for the page layout override.</description>
        <label>Event Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EM_Attendee_vod</fullName>
                </value>
                <value>
                    <fullName>EM_Event_Budget_vod</fullName>
                </value>
                <value>
                    <fullName>EM_Event_Speaker_vod</fullName>
                </value>
                <value>
                    <fullName>EM_Event_Session_vod</fullName>
                </value>
                <value>
                    <fullName>EM_Event_Session_Attendee_vod</fullName>
                </value>
                <value>
                    <fullName>EM_Event_Team_Member_vod</fullName>
                </value>
                <value>
                    <fullName>EM_Event_Material_vod</fullName>
                </value>
                <value>
                    <fullName>EM_Expense_Estimate_vod</fullName>
                </value>
                <value>
                    <fullName>Expense_Header_vod</fullName>
                </value>
                <value>
                    <fullName>Expense_Line_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Status_vod__c</fullName>
        <description>The statuses covered by the event page layout configuration. Populate with an untranslated picklist value from the Status_vod picklist on the EM_Event_vod object.</description>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Team_Role_vod__c</fullName>
        <description>Event Team Role for which the Event Page Layout configuration is for. This is used to determine the page layout a user sees when viewing or editing an event. Event Team Role based page layout configurations supersede those based on profile. Populate with the untranslated picklist value from the Role_vod field on the Event Team Member object.</description>
        <label>Event Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Estimate_Layout_vod__c</fullName>
        <description>The page layout that should be used when a user views or edits an Expense Estimate record for an event. The layout will be based on the user&apos;s profile or role as defined in this Event Layout record.</description>
        <label>Expense Estimate Layout</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Header_Layout_vod__c</fullName>
        <description>The page layout that should be used when a user views or edits an Expense Header record for an event. The layout will be based on the user&apos;s profile or role as defined in this Event Layout record.</description>
        <label>Expense Header Layout</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Line_Layout_vod__c</fullName>
        <description>The page layout that should be used when a user views or edits an Expense Line record for an event. The layout will be based on the user&apos;s profile or role as defined in this Event Layout record.</description>
        <label>Expense Line Layout</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Help_Text_vod__c</fullName>
        <description>Used to store the name and category of a Veeva Message. If populated, this Veeva Message will display as a help text on the Page Layout. The format for this field is: Name;;Category of the Veeva Message. (e.g. HELP_TEXT_US_ADVISORY;;VERTEO_CUSTOM). Customers can create new Veeva Messages to support the help text messages that will be displayed.</description>
        <label>Help Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Layout_vod__c</fullName>
        <description>The page layout to be used for the object, based on the record type, event status, user profile, and event team role of the user viewing the event.</description>
        <label>Page Layout</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_vod__c</fullName>
        <description>The object record type covered by the event page layout configuration. Populate with an untranslated record type name value from each object (selected on Object_Name_vod).</description>
        <label>Object Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO__c</fullName>
        <description>Used to sort Event layouts in a specific order on the Event Configuration page layou</description>
        <label>SO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Profile_Id_vod__c</fullName>
        <description>Id of the profile this event layout record is valid for. This field gets stamped via trigger based of the User_Profile_vod field, which uses the profile name. If data loading configuration, only upsert data into the User_Profile_vod field.</description>
        <label>User Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile_vod__c</fullName>
        <description>Profile for which the Event Page Layout configuration is for. This is used as a base configuration for determining the page layout a user sees when viewing or editing an event. If there is another page layout configuration for the user&apos;s event team role, that supersedes the profile-based configuration. Uses the Name of the profile.</description>
        <label>User Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_Buttons_vod__c</fullName>
        <description>Semicolon-delimited list of the buttons to display on the page. Populate with button API names.</description>
        <label>Visible Buttons</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event Layout</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EPL-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Layouts</pluralLabel>
    <recordTypes>
        <fullName>Event_Layout_vod</fullName>
        <active>true</active>
        <description>Event Layout</description>
        <label>Event_Layout_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related_Object_Layout_vod</fullName>
        <active>true</active>
        <description>Setting the page layout for the related object.</description>
        <label>Related_Object_Layout_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>